# adherence-ml

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  README.md  SECURITY.md  adherence.db  bandit.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/web/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
clients/python/: adherence_client.py
clients/typescript/: adherence-client.ts  package.json
docs/: SUBPROCESSORS.md  THREAT_MODEL.md  openapi.json
infra/docker/: Dockerfile  Dockerfile.trainer  Dockerfile.worker  docker-compose.dev.yml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
mlruns_sample/102272856948918487/: meta.yaml
models/registry/: default_index.json  smoke_index.json
scripts/: demo_predict.sh  dev_up.sh  export_openapi.py  train_baseline.sh
tests/: conftest.py
tests/integration/: test_access_reviews.py  test_admin_audit.py  test_admin_mfa.py  test_api_deprecations.py  test_api_e2e.py  test_api_key_max_active.py  test_api_key_policy.py  test_api_key_rate_limit_override.py  test_api_key_rotation.py  test_api_key_usage.py  test_api_keys.py  test_audit.py  test_audit_chain.py  test_audit_coverage.py  test_audit_csv_export.py  test_audit_tenant_isolation.py  test_batch_predict.py  test_body_size_limit.py  test_break_glass.py  test_caiq.py  test_calibration_drift.py  test_clients_and_openapi.py  test_cohort_export.py  test_cohort_risk.py  test_data_classification.py  test_delivery_ack_budget.py  test_delivery_expiry_stats.py  test_dry_run_destructive.py  test_dsar.py  test_experiments.py  test_explain_cohort.py  test_forecast.py  test_gdpr_data_lifecycle.py  test_idempotency.py  test_incidents.py  test_interventions_api.py  test_invite_policy.py  test_legal_acceptance.py  test_metrics_online.py  test_metrics_report.py  (+32 more)
tests/property/: test_properties.py
tests/unit/: test_admin_audit_chain.py  test_api_key_dormancy.py  test_api_key_last_seen.py  test_auth.py  test_baa.py  test_bcdr.py  test_break_glass.py  test_change_management.py  test_ci_security.py  test_cmek_registry.py  test_consents.py  test_cors.py  test_csv_safe.py  test_disclosures.py  test_dpia.py  test_drift.py  test_dual_control.py  test_eval.py  test_features.py  test_helm_autoscaling.py  test_helm_monitoring.py  test_helm_networkpolicy.py  test_oidc.py  (+35 more)
(+729 files in other folders)
