[project]
name = "adherence-ml"
version = "0.1.0"
description = "Medication adherence prediction service (XGBoost + LightGBM ensemble)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sanjay" }]

dependencies = [
  "numpy>=1.26,<2.2",
  "pandas>=2.2",
  "pyarrow>=15",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "shap>=0.44",
  "scipy>=1.11",
  "mlflow>=2.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "structlog>=24.1",
  "rich>=13.7",
  "typer>=0.12",
  "apscheduler>=3.10",
  "redis>=5.0",
  "rq>=1.16",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pyjwt>=2.8",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "matplotlib>=3.8",
  "joblib>=1.3",
  "tenacity>=8.2",
  "orjson>=3.10",
  "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-requests",
  "pandas-stubs",
]

[project.scripts]
adherence-ml = "adherence_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/data/adherence_data",
  "packages/features/adherence_features",
  "packages/models/adherence_models",
  "packages/eval/adherence_eval",
  "packages/explain/adherence_explain",
  "packages/common/adherence_common",
  "services/api/adherence_api",
  "services/trainer/adherence_trainer",
  "services/inference_worker/adherence_worker",
  "services/cli/adherence_cli",
]

[tool.uv]
package = true

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "mlruns", "mlruns_sample", "web", "infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["mlruns", "mlruns_sample", "web", "infra", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
